# Order-tracking-modular

./: README.md  prompt.py  pyproject.toml
chroma_db/: chroma.sqlite3
crewai_order_tracking_chatbot/src/crewai_order_tracking_chatbot/: crew.py  custom_mem.py  custom_mem_crew.py  main.py  mem_test.py  test_main.py
crewai_order_tracking_chatbot/src/crewai_order_tracking_chatbot/chroma_db/: chroma.sqlite3
crewai_order_tracking_chatbot/src/crewai_order_tracking_chatbot/config/: agents.yaml  tasks.yaml
crewai_order_tracking_chatbot/src/crewai_order_tracking_chatbot/db/: chroma.sqlite3
crewai_order_tracking_chatbot/src/crewai_order_tracking_chatbot/tools/: custom_tool.py
